--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,9 @@
-<br><br>
+<br>
+<div *ngIf="loader" class="text-center">
+    Loading...
+    <mat-progress-bar mode="query"></mat-progress-bar>
+</div>
+<br>
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
