--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,4 +1,9 @@
-<br><br>
+<br>
+<div *ngIf="loader" class="text-center">
+    Loading...
+    <mat-progress-bar mode="query"></mat-progress-bar>
+</div>
+<br>
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
@@ -81,7 +86,8 @@
                                     <ng-container matColumnDef="delete">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Delete </th>
                                         <td mat-cell *matCellDef="let customertable">
-                                            <mat-icon (click)="deletecustomer(customertable.customerid)" color="warn">delete</mat-icon>
+                                            <mat-icon (click)="deletecustomer(customertable.customerid)" color="warn">
+                                                delete</mat-icon>
                                         </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
 
