--- a/src/app/sareeproductpage/sareeproductpage.component.html
+++ b/src/app/sareeproductpage/sareeproductpage.component.html
@@ -1,4 +1,9 @@
-<br><br>
+<br>
+<div *ngIf="loader" class="text-center">
+    Loading...
+    <mat-progress-bar mode="query"></mat-progress-bar>
+</div>
+<br>
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
@@ -73,7 +78,7 @@
                                     </ng-container>
 
                                     <ng-container matColumnDef="sareeqty">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Quality </th>
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
                                         <td mat-cell *matCellDef="let customertable"> {{customertable?.sareeqty}} </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
                                     </ng-container>
