--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -11,7 +11,7 @@
                 <div class="card-header text-center">Customer</div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-sm-3">
                             <form [formGroup]="customerForm" autocomplete="off">
 
                                 <mat-form-field appearance="outline" class="example-full-width">
@@ -36,14 +36,6 @@
                                     <input matInput formControlName="adhaarid">
                                 </mat-form-field>
 
-                                <!-- <mat-form-field appearance="outline" class="example-full-width">                        
-                            <mat-label>Choose a date</mat-label>
-                            <input matInput formControlName="date" [matDatepicker]="picker">
-                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                            <mat-datepicker #picker></mat-datepicker>                          
-                      </mat-form-field> -->
-
-
                                 <mat-form-field appearance="outline" class="example-full-width">
                                     <mat-label>Address</mat-label>
                                     <textarea formControlName="address" matInput></textarea>
@@ -57,7 +49,7 @@
                             </form>
                         </div>
 
-                        <div class="col-sm-8">
+                        <div class="col-sm-9">
                             <div *ngIf="dataSource.data.length == 0" style="text-align: center;">
                                 <div class="spinner-grow spinner-grow-sm" role="status">
                                     <span class="sr-only">Loading...</span>
@@ -68,16 +60,16 @@
                                 <input matInput (keyup)="applyFilter($event)" #input>
                             </mat-form-field>
                             <div class="example-container mat-elevation-z8">
-                                <table mat-table [dataSource]="dataSource" matSort>
+                                <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                                     <ng-container matColumnDef="sno">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> SNo </th>
-                                        <td mat-cell *matCellDef="let customertable;index as i"> {{i+1}}. </td>
+                                        <td mat-cell *matCellDef="let element;index as i"> {{i+1}}. </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
                                     </ng-container>
                                     <ng-container matColumnDef="update">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Update </th>
-                                        <td mat-cell *matCellDef="let customertable">
-                                            <mat-icon (click)="selectedcustomer(customertable)" color="primary">
+                                        <td mat-cell *matCellDef="let element">
+                                            <mat-icon (click)="selectedcustomer(element)" color="primary">
                                                 autorenew
                                             </mat-icon>
                                         </td>
@@ -85,8 +77,8 @@
                                     </ng-container>
                                     <ng-container matColumnDef="delete">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Delete </th>
-                                        <td mat-cell *matCellDef="let customertable">
-                                            <mat-icon (click)="deletecustomer(customertable.customerid)" color="warn">
+                                        <td mat-cell *matCellDef="let element">
+                                            <mat-icon (click)="deletecustomer(element.customerid)" color="warn">
                                                 delete</mat-icon>
                                         </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
@@ -94,51 +86,45 @@
                                     </ng-container>
                                     <ng-container matColumnDef="customername">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Customer Name </th>
-                                        <td mat-cell *matCellDef="let customertable"> {{customertable.customername}}
+                                        <td mat-cell *matCellDef="let element"> {{element?.customername}}
                                         </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="phoneumber">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone Number </th>
-                                        <td mat-cell *matCellDef="let customertable"> {{customertable.phoneumber}} </td>
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone No </th>
+                                        <td mat-cell *matCellDef="let element"> {{element?.phoneumber}}
+                                        </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="adhaarid">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Adhaar Number </th>
-                                        <td mat-cell *matCellDef="let customertable"> {{customertable.adhaarid}} </td>
+                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Adhaar No </th>
+                                        <td mat-cell *matCellDef="let element"> {{element?.adhaarid}} </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="partygstin">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Party's GSTIN </th>
-                                        <td mat-cell *matCellDef="let customertable"> {{customertable.partygstin}} </td>
+                                        <td mat-cell *matCellDef="let element"> {{element?.partygstin}}
+                                        </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="address">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-                                        <td mat-cell *matCellDef="let customertable"> {{customertable.address}} </td>
+                                        <td mat-cell *matCellDef="let element"> {{element?.address}} </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="emailid">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-                                        <td mat-cell *matCellDef="let customertable"> {{customertable.emailid}} </td>
+                                        <td mat-cell *matCellDef="let element"> {{element?.emailid}} </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
                                     </ng-container>
 
-                                    <!-- Cost Column -->
-                                    <!-- <ng-container matColumnDef="cost">
-                          <th mat-header-cell *matHeaderCellDef> Cost </th>
-                          <td mat-cell *matCellDef="let transaction"> {{transaction.cost | currency}} </td>
-                          <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
-                        </ng-container> -->
-
                                     <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
                                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                                    <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr> -->
                                     <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
                                 </table>
                             </div>
