--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -78,7 +78,7 @@
                                     <ng-container matColumnDef="delete">
                                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Delete </th>
                                         <td mat-cell *matCellDef="let element">
-                                            <mat-icon (click)="deletecustomer(element.customerid)" color="warn">
+                                            <mat-icon (click)="deletecustomer(element)" color="warn">
                                                 delete</mat-icon>
                                         </td>
                                         <td mat-footer-cell *matFooterCellDef> </td>
