--- a/src/app/sareeproductgst/sareeproductgst.component.html
+++ b/src/app/sareeproductgst/sareeproductgst.component.html
@@ -145,6 +145,12 @@
                             </tr>
                         </tbody>
                     </table>
+                    <mat-form-field appearance="outline" class="example-full-width">
+                        <mat-label>Choose a date</mat-label>
+                        <input matInput formControlName="date" [matDatepicker]="picker">
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
                 </div>
                 <div class="card-footer text-muted">
                     <button style="float: left;" mat-raised-button (click)="add();" color="primary">Add</button>
