--- a/src/app/sareeproductpage/sareeproductpage.component.css
+++ b/src/app/sareeproductpage/sareeproductpage.component.css
@@ -2,62 +2,65 @@
     min-width: 150px;
     max-width: 500px;
     width: 100%;
-  }
-  
-  .example-full-width {
+}
+
+.example-full-width {
     width: 100%;
-  }
-  section {
+}
+
+section {
     display: table;
-  }
-  
-  .example-label {
+}
+
+.make-gold {
+    background-color: gold
+}
+
+.example-label {
     display: table-cell;
     font-size: 14px;
     margin-left: 8px;
     min-width: 120px;
-  }
-  
-  .example-button-row {
+}
+
+.example-button-row {
     display: table-cell;
     width: 490px;
-  }
-  
-  .example-button-row .mat-button-base {
+}
+
+.example-button-row .mat-button-base {
     margin: 8px 8px 8px 0;
-  }
-  
-  .example-flex-container {
+}
+
+.example-flex-container {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-  }
-  
-  .example-button-container {
+}
+
+.example-button-container {
     display: flex;
     justify-content: center;
     width: 120px;
-  }
-  
+}
 
-  .example-container {
+.example-container {
     height: 370px;
     overflow: auto;
-  }
-  
-  table {
-    width: 100%;
-  }
-  
-  tr.mat-footer-row {
-    font-weight: bold;
-  }
-  
-  .mat-table-sticky {
-    border-top: 1px solid #e0e0e0;
-  }
-  
-mat-icon {cursor: default;}
+}
 
-  
- 
+table {
+    width: 100%;
+}
+
+tr.mat-footer-row {
+    font-weight: bold;
+}
+
+.mat-table-sticky {
+    border-top: 1px solid #e0e0e0;
+}
+
+mat-icon {
+    cursor: default;
+}
