--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -16,7 +16,7 @@
 
                                 <mat-form-field appearance="outline" class="example-full-width">
                                     <mat-label>Customer Name</mat-label>
-                                    <input matInput formControlName="customername">
+                                    <input matInput style="text-transform: capitalize;" formControlName="customername">
                                 </mat-form-field>
 
                                 <mat-form-field appearance="outline" class="example-full-width">
