--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -11,7 +11,7 @@
 
                                 <mat-form-field appearance="outline" class="example-full-width">
                                     <mat-label>Product Name</mat-label>
-                                    <input matInput formControlName="productname">
+                                    <input matInput style="text-transform: capitalize;" formControlName="productname">
                                 </mat-form-field>
 
                                 <mat-form-field appearance="outline" class="example-full-width">
