--- a/src/app/sareeproductpage/sareeproductpage.component.html
+++ b/src/app/sareeproductpage/sareeproductpage.component.html
@@ -15,7 +15,7 @@
                             <form autocomplete="off" [formGroup]="sareesForm">
                                 <mat-form-field appearance="outline" class="example-full-width">
                                     <mat-label>Product Name</mat-label>
-                                    <input matInput formControlName="sareeproductname" required>
+                                    <input matInput style="text-transform: capitalize;" formControlName="sareeproductname" required>
                                 </mat-form-field>
                                 <mat-form-field appearance="outline" class="example-full-width">
                                     <mat-label>Product Quantity</mat-label>
